--- a/package.json
+++ b/package.json
@@ -6,10 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "webpack",
+    "transpiling",
+    "es6"
+  ],
   "author": "LaVaughn Haynes",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
     "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0"
+    "css-loader": "^0.26.0",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1"
   }
 }
